--- a/index.html
+++ b/index.html
@@ -1,104 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="UTF-8">
-	<title>About</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="sheet/bootstrap.css">
-	<link rel="stylesheet" href="sheet/ionicons.min.css">
-	<link rel="stylesheet" href="sheet/mine.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
-	<link rel="icon" href="favicon.ico" type="image/x-icon" />
-	<script src="javascript/myscript.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Happy New Year</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
+    <body>
+        <div class="all">
+            <div class="text">
+                <p class="first" >Xin chào,</p>
+                <p class="second" >Khi bạn nhấn vào đây thì cũng là lúc năm mới đang đến gần. Năm vừa qua bạn đã làm được gì hay vẫn ăn hại... giống mình:( Tạm dừng sự nhạt nhẽo tại đây để trở về với vấn đề chính, dù bạn có làm được gì hay không được gì thì hãy bỏ qua hết để đón 1 năm mới thật bùng nổ cùng nhiều điều mà năm vừa rồi bạn đã không thể làm được và những điều bạn mong muốn trong năm nay. </p>
 
-<body>
-	<div class="menu">
-		<div class="container">
-			<div class="row">
-				<div class="col-12 text-center">
-					<h3 class="py-3">About <span>Me</span></h3>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="container" style="margin-top: 116px;">
-		<div class="row">
-			<div class="col-11 mx-auto profile">
-				<div class="py-3 px-2 px-lg-4 py-lg-5">
-
-					<div class="row">
-						<div class="avatarBox col-12 col-lg-5">
-							<img src="img/n.jpg" class="img-fluid">
-						</div>
-
-						<div class="infoBox col-12 col-lg-6 mt-2 mt-lg-0">
-							<p class="sayHi">Hello</p>
-
-							<div class="name">
-								<p><span>I'm</span> Bều Ú</p>
-								<p class="s">Verified
-									<span class="ion-ios-checkmark-outline"></span>
-								</p>
-								<p><span class="ion-android-globe"></span> Vtc</p>
-							</div>
-							<hr>
-
-							<div class="detailInfo">
-								<div class="row my-2">
-									<div class="col-lg-4 col-12 boldd">Name</div>
-									<div class="col-lg-8 col-12 b">N/A</div>
-								</div>
-								<div class="row my-2">
-									<div class="col-lg-4 col-12 boldd">Company</div>
-									<div class="col-lg-8 col-12 b">N/A</div>
-								</div>
-								<div class="row my-2">
-									<div class="col-lg-4 col-12 boldd">Jobs</div>
-									<div class="col-lg-8 col-12 b">N/A</div>
-								</div>
-								<div class="row">
-									<div class="col-lg-4 col-12 boldd">Birthday</div>
-									<div class="col-lg-8 col-12 b">N/A</div>
-								</div>
-
-							</div>
-						</div>
-					</div>
-
-				</div>
-			</div>
-			<div class="col-11 mx-auto bg-danger contact text-center">
-				<div class="social col-12">
-					<!-- Facebook -->
-					<a href="https://facebook.com/profile.php" target="_blank">
-						<span class="ion-social-facebook mr-4 mr-lg-5"></span>
-					</a>
-					<!-- Youtube -->
-					<a href="https://www.youtube.com/channel/UCEapSmt66qzT2TuUZJBR43g?sub_confirmation=1" target="_blank">
-						<span class="ion-social-youtube-outline mr-4 mr-lg-5 ml-lg-3"></span>
-					</a>
-					<span class="ion-social-instagram-outline mr-4 mr-lg-5 ml-lg-3"></span>
-					<span class="ion-social-skype-outline mr-4 mr-lg-5 ml-lg-3"></span>
-					<span class="ion-social-twitter-outline ml-lg-3"></span>
-				</div>
-			</div>
-		</div>
-	</div>
-
+                <p class="third">Trước khi đón năm mới, chúng ta hãy cùng đếm ngược những giây cuối cùng của năm 2021 </p>
+            </div>
+            <div class="btn">
+                <a href="index1.html" class="btn-link"> Bắt đầu xem </a>
+            </div>
+        </div>
 </body>
-<footer>
-	<div class="container-fluid mt-2">
-		<div class="row">
-			<div class="col-11 text-right">
-				<p class="test mr-lg-4 mr-0">
-					<a href="#"></a>
-				</p>
-			</div>
-		</div>
-	</div>
-</footer>
-
 </html>
